@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.2 2003/10/15 04:30:02 drobbins Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.3 2003/10/15 05:33:03 zhen Exp $
+
+  15 Oct 2003; zhen <zhen@gentoo.org> targets/stage3/stage3.sh:
+  All preliminary target build scripts are now added and coded to near as spec
+  that we can have at this point.
 
   14 Oct 2003; Daniel Robbins <drobins@gentoo.org>: new and improved ChangeLog;
   snapshots now work ("./catalyst-util.py snap 20031014",) and snapshotting cleans
